# snote-api

./: .gitignore  Cargo.toml  Dockerfile  compose.build.yaml
.github/workflows/: build.yaml  check.yaml
.sqlx/: query-14cdab13fe3f78cc002a3a83804053a84f1c26c5f2cf48a55b0e8b2e9e9fad9e.json  query-160c4052f514658e2fac393f77ee782b13c6201fb77a7e4452d81c979e3b9324.json  query-2ede2727c340eb35b6cd8cee06b606a7b3f9e3ae9e853de28d67c9c26910fcce.json  query-30dbd13b78eb1fce0f6eb6d0f9dae95ef6bd2d4620751550b4584eb6a5eb2161.json  query-336ba0479bff6728e4828da2d6e4d5d85ce6515170bcd90c8eaf8e2cbf2a0a04.json  query-38da51fd9e9666db8da5e8d43b003a26417ad50df6bacf4ed294f29fd358a4c7.json  query-3cfdf758cca20e64cac3423d724e80183f0bab9ecb52d66f49c199b990445b72.json  query-482fd20592206e53db256f8ca819e0f7746377c0a5f590e9da660a391426ab09.json  query-4ba54e6c39ae91ab14d4f77cce466ebbf4c5446626183d82764a538dacbd5404.json  query-532566cc138f0db2404bc7f920bb7e2afb4b7a9e53a0a2e5fd7f56f52d8b46f8.json  query-575c34bd87aacf1f6639ba5a3610e7636f55b82a616b8852f2b4bc4342685c33.json  query-5f4db1638a83510326e60ac4a5832a9dada504ab9ca2f0ac6c0fbfb402e218ba.json  query-61407cb4df7cb76e51b3a64f3ea2b430b54945852157b2cdea0c5a444482095a.json  query-634fe1a67d7889b1f9ca7140fee20692a803e3c0e7352bca0e3f1bdd10569ed9.json  query-6b57848f4e9a94540cca06df191138028d83051b8877ab71f389c81689b6c7b4.json  query-77432739470df0135d914f32ba5c222a1805ae7d6fb103dbb38f37df957635ab.json  query-7fafafb85621e318c9f3f1b116f21aba18fcca61f575aec80bb426d3a6290c1b.json  query-8527b4fae491f6c933fa42550d853e390548a8c715a936ae72008c9cb5e25b9e.json  query-8645f91aad4236953db21ccc290195b74785721128028c5e154f1f64cd3ce13a.json  query-930ae8cb18b01409ec0cf45edede17fca38142a29f88b1ad47668dc02129345a.json  query-99d0e48a79eb494931e92f4441b6ea6456ac06813c876421d4b2ef0929f89d44.json  query-9bcacb4377b0ccde5f72fe6f594a309d8fae0fcd2c2b6a086867d488c893217a.json  query-b0d559f2cf9e20fe9e02b8ff75e6f229d8b13353a28578430dcccd5d8b2935d1.json  query-b47b41454ba2a168a39dddeeb03a270b4422336d0cdeb5cefe5a73377f9e9320.json  query-bec01c5da56f2e356a6e0a3e88874e5f07f3d0ede2037e0873a8ab0b78fbb374.json  query-bfdfcb95479f4f1b5653a32784623b70e686d69f203e26f4260920df89199d4f.json  query-dc24b451d036fd534339e17f201dee9731cbec9eefede7aed84641dadcfb67c4.json  query-e06455a0740d07e0b67ee20a186281b4af1f8c70ced191e001605e497ab6be9b.json  query-f362c23c9e9eb2c1ebc0f45fb47afee46f803a663ebe79d56404268a2c596aa4.json
migrations/: 20260528092622_init.sql  20260601182835_add_project_metadata.sql  20260605113101_create_chat_message.sql  20260605113101_create_llm_conversation_histories.sql  20260606085632_add_transcript_segment_embedding.sql  20260617160406_create_task.sql  20260624144255_create_quota.sql
src/: bootstrap.rs  config.rs  doc.rs  error.rs  main.rs  state.rs
src/feature/: mod.rs
src/feature/auth/: extractor.rs  mod.rs  model.rs  repository.rs  route.rs  routes.rs  service.rs
src/feature/chat/: mod.rs  model.rs  routes.rs  service.rs
src/feature/payment_test/: mod.rs  routes.rs  service.rs
src/feature/project/: mod.rs  model.rs  routes.rs  service.rs
src/infra/: mod.rs  storage.rs  transcript.rs
src/shared/: config.rs  mod.rs  state.rs
src/transport/: mod.rs
src/util/: mod.rs  pagination.rs  storage.rs  token.rs
(+116 files in other folders)
