[package]
name = "snote-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
bcrypt = "0.19.1"
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
config = { version = "0.15.23", default-features = false }
jsonwebtoken = "10.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.20.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "chrono", "env-filter"] }
utoipa = { version = "5.5.0", features = ["uuid"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng", "serde"] }
