[package]
name = "snote-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.135.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.9", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12.6", features = ["typed-header", "cookie"] }
base64 = "0.22.1"
bcrypt = "0.19.1"
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
config = { version = "0.15.23", default-features = false }
futures = "0.3.32"
http = "1.4.1"
itertools = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
pgvector = { version = "0.4.2", features = ["sqlx"] }
reqwest = { version = "0.13.4", features = ["json"] }
rig-core = "0.38.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "chrono", "env-filter"] }
utoipa = { version = "5.5.0", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng", "serde"] }
